# calclib

./: CMakeLists.txt  README.md
include/: calclib.h  calculus.h  frac.h  matrix.h  poly.h  trig.h
src/: calculus.c  frac.c  matrix.c  poly.c  sample_app.c  trig.c
tests/: CMakeLists.txt  test_calculus.c  test_frac.c  test_matrix.c  test_poly.c  test_trig.c
